--- a/theme/userstyle.css
+++ b/theme/userstyle.css
@@ -1,10 +1,11 @@
+/* For styling the rendered Markdown */
 /* html-ized markdown */
 /* designed by uxamanda (https://discourse.joplinapp.org/u/uxamanda). latest version https://github.com/amandamcg/joplin-theme */
 :root {
-    --white: #e3e3e3;
-    --dark-white: #EEF0EA;
-    --light-grey: #A3A79F;
-    --grey: #575856;
+    --white: #FFF;
+    --dark-white: #E3E3E3;
+    --light-grey: #d4d4d4;
+    --grey: #f2f7ed;
     --dark-grey: #272728;
     --darker-grey: #1D2024;
     --black: #131517;
@@ -22,23 +23,26 @@
     --font-weight-light: 200;
     --font-weight-base: 400;
     --font-weight-bold: 500;
-    --font-sans: "IBM Plex Sans";
-    --font-mono: "IBM Plex Mono";
-    --primary: #0097DB;
+    --font-sans: "Ubuntu";
+    --font-mono: "Ubuntu Mono";
+    --primary: #62cdff;
     --secondary: #00dbcc;
     --font-line-height: 1.4em;
     --font-size: var(--base-size-13);
     --icon-size: var(--font-size);
 }
+#rendered-md > blockquote > p {
+    opacity: 0.9;
+}
 
-.hljs {
-    background-color: black;
+#rendered-md .hljs {
+    background-color: black ;
     padding: var(--base-size-18);
     border-radius: var(--base-size-4) !important;
 }
 
 #rendered-md {
-    padding: 6%;
+    padding: 2.5%;
 }
 
 body {
@@ -56,7 +60,7 @@ p, h1, h2, h3, h4, h5, h6, ul, table {
 
 h1, h2, h3, h4 {
     font-weight: var(--font-weight-light) !important;
-    letter-spacing: 0.01em;
+    letter-spacing: 0.04em;
     margin-top: var(--base-size-24);
 }
 
@@ -87,11 +91,12 @@ p, li {
     /* font-weight: var(--font-weight-base) !important; */
     letter-spacing: .03em;
     color: var(--light-grey);
-    margin-bottom: var(--base-size-24);
+    margin-bottom: var(--base-size-10) !important;
     word-wrap: break-word;
     overflow-wrap: break-word;
     hyphens: auto;
 }
+
 
 ol li, ul li {
     margin-bottom: var(--base-size-4);
@@ -99,11 +104,15 @@ ol li, ul li {
 
 ul ul {
     /* list-style-type: cjk-heavenly-stem; */
-    list-style-type: disc;
+    list-style-type: circle;
+}
+
+table{
+    margin:var(--base-size-13) auto;
 }
 
 hr {
-    padding: var(--base-size-24) !important;
+    padding: var(--base-size-8) !important;
 }
 
 .md-checkbox {
@@ -130,7 +139,7 @@ hr {
 a, summary {
     text-decoration: none !important;
     padding: 0 0 var(--base-size-4) 0 !important;
-    color: var(--secondary) !important;
+    color: var(--primary) !important;
     font-weight: var(--font-weight-bold) !important;
 }
 
@@ -167,11 +176,14 @@ pre {
 
 /* ```inline code``` */
 .inline-code {
+    font-size: 13px;
+    margin: 2px;
     padding: .3em .6em !important;
     border-radius: var(--base-size-4) !important;
     background-color: #040404 !important;
     border: none !important;
-    color: #abb2bf !important;
+    color: var(--white) !important;
+	
 }
 
 /* ==emphasis== */
@@ -191,10 +203,10 @@ nav.table-of-contents>ul {
     padding: var(--base-size-8);
     border-radius: var(--base-size-4);
     max-width: 15%;
-    font-size: calc(var(--font-size)/1.3) !important;
+    font-size: var(--base-size-10) !important;
     max-height: var(--base-size-272);
     overflow: scroll;
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 nav.table-of-contents ul {
@@ -206,12 +218,12 @@ nav.table-of-contents li {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
 }
 
 nav.table-of-contents li a {
     padding: 0;
-    color: var(--light-grey) !important;
+    color: var(--white) !important;
 }
 
 @media all and (min-width: 920px) {
